<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".VegetableDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:paddingBottom="1pt"
        android:background="@color/colorLightGrey"
        android:layout_height="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:minHeight="200dp"
            android:background="@color/colorBlack"
            android:id="@+id/img_vegetable_photo"
            android:layout_marginBottom="5pt"
            android:contentDescription="@string/vegetable_photo"
            android:layout_height="wrap_content"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="10pt"
            android:paddingHorizontal="5pt"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:id="@+id/rv_vegetable_images"
                android:layout_height="wrap_content"/>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2pt"
            app:cardCornerRadius="2pt"
            android:layout_marginHorizontal="5pt"
            android:layout_marginBottom="5pt">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10pt"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:id="@+id/tv_vegetable_name"
                        android:textColor="@color/colorBlack"
                        android:layout_marginBottom="2pt"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/tv_vegetable_price"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_vegetable_stock"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="20pt"
                    app:cardCornerRadius="10pt"
                    android:elevation="3pt"
                    android:id="@+id/cv_favorite"
                    android:layout_height="20pt">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="5pt"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <ImageView
                            android:contentDescription="@string/favorite"
                            android:layout_width="10pt"
                            android:id="@+id/img_favorite"
                            android:src="@drawable/ic_favorite_off"
                            android:layout_height="10pt"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2pt"
        app:cardCornerRadius="2pt"
        android:layout_marginHorizontal="5pt"
        android:layout_marginBottom="5pt">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10pt"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10pt"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_vegetable_description"
            android:textSize="16sp"
            android:textColor="@color/colorGrey"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2pt"
            app:cardCornerRadius="2pt"
            android:layout_marginHorizontal="5pt"
            android:layout_marginBottom="15pt">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10pt"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10pt"
                    android:text="@string/informasi_toko"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="15pt"
                        android:layout_height="15pt"
                        android:contentDescription="@string/store_photo"
                        android:layout_marginEnd="10pt"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_store_black_24dp"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/tv_vegetable_store"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="1pt"
                            android:textColor="@color/colorBlack"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/tv_vegetable_address"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/colorGrey"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10pt"
        android:background="@color/colorWhite"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5pt"
            android:id="@+id/btn_buy_product"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/beli_produk"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="0dp"
            android:id="@+id/btn_add_to_cart"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:textColor="@color/colorBlack"
            android:text="@string/tambah_keranjang"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>