<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorLightGrey"
    android:orientation="vertical"
    android:padding="10pt"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="3pt"
        android:layout_marginBottom="10pt"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10pt"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="75dp"
                android:layout_gravity="center"
                android:layout_height="75dp"
                android:id="@+id/img_profile"
                android:layout_marginBottom="10pt"
                android:src="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                android:textColor="@color/colorGrey"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="1pt"
        android:id="@+id/cv_profile"
        android:layout_marginBottom="2pt"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="8pt"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_black"
                android:drawablePadding="5pt"
                android:text="@string/profile_dicoding"/>
            <ImageView
                android:contentDescription="@string/click_for_detail"
                android:layout_width="10pt"
                android:layout_height="10pt"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="1pt"
        android:id="@+id/cv_portfolio"
        android:layout_marginBottom="2pt"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="8pt"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phonelink_black_24dp"
                android:drawablePadding="5pt"
                android:text="@string/portofolio_dicoding"/>
            <ImageView
                android:contentDescription="@string/click_for_detail"
                android:layout_width="10pt"
                android:layout_height="10pt"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>